test/invalidImports/c.ts
import {a1, b2} from './a';
import {b1, a2} from './b';

console.log(a1, b2, b1, a2);

export const c1 = 1;
export const c2 = 2;
export const c3 = 3;
